# AutoZeroFrameAction

./: .gitignore  Cargo.toml  build.rs
examples/: config_service_demo.rs  error_demo.rs  state_manager_demo.rs  window_service_demo.rs
src/: config.rs  lib.rs  main.rs
src/models/: config.rs  mod.rs  operation.rs  state.rs  window.rs
src/services/: action_service.rs  config_service.rs  mod.rs  mode_manager.rs  state_manager.rs  state_manager_test.rs  vision_service.rs  window_service.rs
src/ui/: app_ui.rs  mod.rs  overlay.rs
src/utils/: error.rs  logger.rs  mod.rs  system.rs
ui/: main.slint
